добавил логику смены пароля
